<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yep!</string>
    <string name="subtitle">A Targaryen Project</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Sign Out</string>
    <string name="title_activity_main_activity2">Yep!</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="title_section3">Section 3</string>
    <string name="prueba">Prueba pruebecita</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">E-mail</string>
    <string name="loginbt">SIGN IN</string>
    <string name="title_activity_activity_sign_up">ActivitySignUp</string>
    <string name="title_activity_main_activity__tab">Yep!</string>
    <string name="signup_button_label">SIGN UP</string>
    <string name="signup_label"><b>Don\'t have an account? Sign up!</b></string>
    <string name="alert">Alert</string>
    <string name="field_missing">The field %1$s is required.</string>
    <string name="alert_button">OK</string>
    <string name="background">Ribbit Frog Background Image</string>
    <string name="login_in">Login In</string>
    <string name="signing_up">Signing Up</string>
    <string name="please_wait">Please wait…</string>
    <string name="signup_title">Sign Up!</string>
    <string name="no_messages">No messages</string>
    <string name="add_friends">Add friends to start chatting</string>
    <string name="action_edit_friends">Add/Edit Friends</string>
    <string name="title_activity_edit_friends">@string/action_edit_friends</string>
    <string name="no_friends">There\'s no users to add</string>
    <string name="background_content_description">Background Image</string>
    <string name="content_desc_button_divider">Button divider</string>
    <string name="camera_action_label">Camera</string>
    <string name="choose_action">Choose action</string>

    <string name="take_picture">Take a picture</string>
    <string name="make_video">Make a video</string>
    <string name="choose_picture">Choose a picture</string>
    <string name="choose_video">Choose a video</string>
    <string name="video_size_limit">The video size must be less than 10 MB</string>

    <string-array name="camera_choices">
        <item>@string/take_picture</item>
        <item>@string/make_video</item>
        <item>@string/choose_picture</item>
        <item>@string/choose_video</item>
    </string-array>
    <string name="title_activity_recipients">Choose recipients</string>
    <string name="no_recipents">Friend\'s list empty</string>
    <string name="send">Send</string>
    <string name="title_activity_image_view">ImageViewActivity</string>
    <string name="message_image">Message Image</string>
    <string name="message_icon">Message Icon</string>
    <string name="error_sending_message">And error has occurred sending the message</string>
    <string name="refreshing">Refreshing…</string>
    <string name="image_not_found">Image not found</string>
    <string name="video_not_found">Video not found</string>
    <string name="unknow_error">Unknow error</string>
    <string name="error_external_storage">Error in external storage</string>
    <string name="message_sended">Message sended!</string>
    <string name="sender_name">Sender: %s</string>
    <string name="content_desc_user_avatar">User avatar</string>
    <string name="content_desc_user_checkmark">User checkmark</string>
    <string name="video">video</string>
    <string name="image">image</string>
    <string name="notification_text">%1$s has send you a new %2$s</string>
</resources>
