<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="es.uem.david.samuel.nacho.yepnsd.ui.activities.MainActivityTabbed">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit_friends"
        android:orderInCategory="200"
        android:title="@string/action_edit_friends"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="300"
        android:title="@string/action_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_camera"
        android:orderInCategory="400"
        android:title="@string/camera_action_label"
        android:icon="@drawable/ic_menu_camera_white"
        app:showAsAction="ifRoom" />
</menu>
