<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_fill"
    tools:context="es.uem.david.samuel.nacho.yepnsd.SignUpActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/background"
        android:scaleType="fitStart"
        android:src="@drawable/background" />


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/signup_title"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:layout_marginTop="@dimen/login_vertical_margin" />

    <LinearLayout
        android:id="@+id/editTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/login_vertical_margin"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/login_vertical_padding"
        android:paddingLeft="@dimen/login_horizontal_padding"
        android:paddingRight="@dimen/login_horizontal_padding"
        android:paddingTop="@dimen/login_vertical_padding">

        <EditText
            android:id="@+id/usernameField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:textColorHint="@color/light_grey"
            android:inputType="textVisiblePassword|textNoSuggestions"/>

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_hint"
            android:textColorHint="@color/light_grey"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_hint"
            android:textColorHint="@color/light_grey"
            android:inputType="textEmailAddress" />

    </LinearLayout>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:onClick="signUpClick"
        android:layout_below="@id/editTextLayout"
        android:text="@string/signup_button_label"
        android:background="@drawable/button_custom"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin" />


</RelativeLayout>
